--- a/src/pages/style/HomePage.scss
+++ b/src/pages/style/HomePage.scss
@@ -14,6 +14,7 @@ div.loginCqcfe-page-home {
 
         div.main-container {
             width: 100%;
+            height: 325px;
             padding: 25px;
         }
     }
